syntax = "proto3";

package sharepubapi_v1;

import "DataEntry.proto";

message ExtraData {
    repeated DataEntry list = 1;
}
