syntax = "proto3";

package sharepubapi_v1;

message IssuingAttributes {
     string expiry_date = 1;
     repeated Definition definitions = 2;
 }

message Definition {
     string name = 1;
}
